--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -37,18 +37,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-06-20 16:56:57,248] A new study created in memory with name: no-name-29b601c4-71ca-49c9-bc4a-f4e264411422\n"
+      "[I 2024-06-20 17:15:43,686] A new study created in memory with name: no-name-6f66a1d5-a523-41ae-9ff5-39f30e171fcd\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b9e1ed0b83448f58094db101f653b71",
+       "model_id": "4fc9200e3d164e7f9cc2394adecc9161",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1000 [00:00<?, ?it/s]"
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -74,7 +74,7 @@
       "Epoch 92: reducing lr to 1.2246501296949797e-07\n",
       "Epoch 95: reducing lr to 4.1170440933682266e-08\n",
       "Epoch 98: reducing lr to 3.065776520088612e-09\n",
-      "[I 2024-06-20 16:58:49,524] Trial 0 finished with value: 1.074925422668457 and parameters: {'hidden_size': 93, 'n_layers': 6, 'rnn_dropout': 9.149985387590931e-05, 'bidirectional': True, 'fc_dropout': 0.07387087581503825, 'learning_rate_model': 5.5595654267125665e-05}. Best is trial 0 with value: 1.074925422668457.\n",
+      "[I 2024-06-20 17:17:33,993] Trial 0 finished with value: 1.074925422668457 and parameters: {'hidden_size': 93, 'n_layers': 6, 'rnn_dropout': 9.149985387590931e-05, 'bidirectional': True, 'fc_dropout': 0.07387087581503825, 'learning_rate_model': 5.5595654267125665e-05}. Best is trial 0 with value: 1.074925422668457.\n",
       "Epoch 5: reducing lr to 0.0005387365928342462\n",
       "Epoch 8: reducing lr to 0.0010075004585150499\n",
       "Epoch 11: reducing lr to 0.001572440058027613\n",
@@ -107,36 +107,51 @@
       "Epoch 92: reducing lr to 7.168708694427484e-05\n",
       "Epoch 95: reducing lr to 2.4099854376222196e-05\n",
       "Epoch 98: reducing lr to 1.794607150387012e-06\n",
-      "[I 2024-06-20 16:59:14,026] Trial 1 finished with value: 1.1337717771530151 and parameters: {'hidden_size': 79, 'n_layers': 3, 'rnn_dropout': 0.4310533872026856, 'bidirectional': False, 'fc_dropout': 0.16356179978521396, 'learning_rate_model': 0.032543911150884876}. Best is trial 0 with value: 1.074925422668457.\n",
-      "Epoch 23: reducing lr to 0.0015883448168686608\n",
-      "Epoch 26: reducing lr to 0.001593303127148259\n",
-      "Epoch 29: reducing lr to 0.0015791271028506397\n",
-      "Epoch 32: reducing lr to 0.001552630781821005\n",
-      "Epoch 35: reducing lr to 0.0015142320264824375\n",
-      "Epoch 38: reducing lr to 0.0014645363978552646\n",
-      "Epoch 41: reducing lr to 0.0014043276320060158\n",
-      "Epoch 44: reducing lr to 0.001334555257449977\n",
-      "Epoch 47: reducing lr to 0.0012563196571461655\n",
-      "Epoch 50: reducing lr to 0.001170854628458233\n",
-      "Epoch 53: reducing lr to 0.0010795080752780714\n",
-      "Epoch 56: reducing lr to 0.0009837203054787861\n",
-      "Epoch 59: reducing lr to 0.0008850023741739571\n",
-      "Epoch 62: reducing lr to 0.000784910760067453\n",
-      "Epoch 65: reducing lr to 0.0006850242626022226\n",
-      "Epoch 68: reducing lr to 0.0005869177118173966\n",
-      "Epoch 71: reducing lr to 0.0004921388876674173\n",
-      "Epoch 74: reducing lr to 0.00040218208043222935\n",
-      "Epoch 77: reducing lr to 0.00031846622773632936\n",
-      "Epoch 80: reducing lr to 0.00024231133083625378\n",
-      "Epoch 83: reducing lr to 0.0001749186223215349\n",
-      "Epoch 86: reducing lr to 0.00011735064802960646\n",
-      "Epoch 89: reducing lr to 7.05156302546384e-05\n",
-      "Epoch 92: reducing lr to 3.515195325218233e-05\n",
-      "Epoch 95: reducing lr to 1.1817427524651174e-05\n",
-      "Epoch 98: reducing lr to 8.799903768647033e-07\n",
-      "[I 2024-06-20 16:59:49,769] Trial 2 finished with value: 1.0883443355560303 and parameters: {'hidden_size': 21, 'n_layers': 5, 'rnn_dropout': 0.3338438418937016, 'bidirectional': True, 'fc_dropout': 0.15848119126790305, 'learning_rate_model': 0.015957993164212966}. Best is trial 0 with value: 1.074925422668457.\n",
-      "[I 2024-06-20 17:00:43,130] Trial 3 finished with value: 1.1042189598083496 and parameters: {'hidden_size': 195, 'n_layers': 3, 'rnn_dropout': 0.5538580925354513, 'bidirectional': False, 'fc_dropout': 0.06803536909582233, 'learning_rate_model': 1.432910723846784e-05}. Best is trial 0 with value: 1.074925422668457.\n"
+      "[I 2024-06-20 17:18:02,108] Trial 1 finished with value: 1.1337717771530151 and parameters: {'hidden_size': 79, 'n_layers': 3, 'rnn_dropout': 0.4310533872026856, 'bidirectional': False, 'fc_dropout': 0.16356179978521396, 'learning_rate_model': 0.032543911150884876}. Best is trial 0 with value: 1.074925422668457.\n",
+      "Epoch 41: reducing lr to 2.8038461569430605e-06\n",
+      "Epoch 56: reducing lr to 1.964071869812594e-06\n",
+      "Epoch 65: reducing lr to 1.3677026659130556e-06\n",
+      "Epoch 68: reducing lr to 1.1718255293248927e-06\n",
+      "Epoch 71: reducing lr to 9.825924502371466e-07\n",
+      "Epoch 74: reducing lr to 8.029868920263765e-07\n",
+      "Epoch 77: reducing lr to 6.358418708027217e-07\n",
+      "Epoch 86: reducing lr to 2.3429942984357702e-07\n",
+      "Epoch 89: reducing lr to 1.4078978038156243e-07\n",
+      "Epoch 92: reducing lr to 7.018352896352622e-08\n",
+      "Epoch 95: reducing lr to 2.359438637735572e-08\n",
+      "Epoch 98: reducing lr to 1.7569672347722846e-09\n",
+      "[I 2024-06-20 17:22:04,129] Trial 2 finished with value: 1.0754683017730713 and parameters: {'hidden_size': 168, 'n_layers': 7, 'rnn_dropout': 0.01354746560182288, 'bidirectional': True, 'fc_dropout': 0.007493261707169491, 'learning_rate_model': 3.186133832750112e-05}. Best is trial 0 with value: 1.074925422668457.\n",
+      "\n",
+      "Optuna study saved to optuna\\no-name-6f66a1d5-a523-41ae-9ff5-39f30e171fcd.pkl\n",
+      "To reload the study run: study = joblib.load('optuna\\no-name-6f66a1d5-a523-41ae-9ff5-39f30e171fcd.pkl')\n",
+      "\n",
+      "Study statistics    : \n",
+      "  Study name        : no-name-6f66a1d5-a523-41ae-9ff5-39f30e171fcd\n",
+      "  # finished trials : 3\n",
+      "  # pruned trials   : 0\n",
+      "  # complete trials : 3\n",
+      "\n",
+      "Best trial          :\n",
+      "  value             : 1.074925422668457\n",
+      "  best_params = {'hidden_size': 93, 'n_layers': 6, 'rnn_dropout': 9.149985387590931e-05, 'bidirectional': True, 'fc_dropout': 0.07387087581503825, 'learning_rate_model': 5.5595654267125665e-05}\n",
+      "\n",
+      "O Melhor modelo foi o de número 0\n",
+      "Best hyperparameters:  {'hidden_size': 93, 'n_layers': 6, 'rnn_dropout': 9.149985387590931e-05, 'bidirectional': True, 'fc_dropout': 0.07387087581503825, 'learning_rate_model': 5.5595654267125665e-05}\n",
+      "Métricas de Treinamento para <class 'tsai.models.RNNPlus.LSTMPlus'>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "train_loss    0.501068\n",
+       "valid_loss    0.470179\n",
+       "mae           0.846331\n",
+       "_rmse         1.085134\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -237,16 +252,18 @@
     "    forecast = np.array(lista_previsoes)\n",
     "    return model_fit, forecast\n",
     "\n",
-    "def forecast_ann(X, y, splits, model=LSTMPlus, epochs=200, arch_config={}, btfms=TSStandardize(), loss_func=nn.MSELoss(), cbs=[]):\n",
-    "    learn = TSForecaster(X, y, splits=splits, arch=model, metrics=[mae, rmse], arch_config=arch_config,\n",
-    "                         batch_tfms=btfms, tfms=[None, [TSForecasting()]], loss_func=loss_func)\n",
+    "def forecast_ann(X, y,splits,model = LSTMPlus, epochs=100,arch_config={},btfms=TSStandardize(),loss_func=nn.MSELoss(),cbs=[],lr = None):\n",
+    "    learn = TSForecaster(X, y,splits=splits, arch=model, metrics=[mae, rmse],arch_config=arch_config, batch_tfms=btfms, tfms=[None, [TSForecasting()]], loss_func=loss_func) # type: ignore\n",
     "    with ContextManagers([learn.no_logging(), learn.no_bar()]):\n",
-    "        lr = learn.lr_find()\n",
-    "        learn.fit_one_cycle(epochs, lr_max=lr.valley, cbs=cbs)\n",
+    "        if not lr:\n",
+    "            lr = learn.lr_find() # Achar o melhor learning rate pro modelo, método da biblioteca fastai\n",
+    "            learn.fit_one_cycle(epochs, lr_max=lr.valley, cbs=cbs) # Treinar o modelo\n",
+    "        else:\n",
+    "            learn.fit_one_cycle(epochs, lr_max=lr, cbs=cbs)\n",
     "        print(f'Métricas de Treinamento para {model}')\n",
     "        display(pd.Series(learn.recorder.values[-1], index=learn.recorder.metric_names[1:5]))\n",
-    "        raw_preds, target, _ = learn.get_X_preds(X[splits[2]], y[splits[2]])\n",
-    "        return raw_preds, target\n",
+    "        raw_preds, target, _ = learn.get_X_preds(X[splits[2]],y[splits[2]])\n",
+    "        return raw_preds,target\n",
     "\n",
     "\n",
     "\n",
@@ -300,7 +317,16 @@
     "def Default_LSTM(peru):\n",
     "    peru_x,peru_y = SlidingWindow(window_len=8,horizon=8,stride=None)(peru['peru'].values)\n",
     "    splits = TSSplitter(valid_size=0.15,test_size=0.15)(peru_y)\n",
-    "    peru_forecast, target_peru = forecast_ann(peru_x, peru_y, splits, model=LSTMPlus, epochs=100, arch_config={}, btfms=TSStandardize(), loss_func=HuberLoss('mean'))\n",
+    "    optuna_opt = optuna_optimize(LSTMPlus,peru_x,peru_y,splits)\n",
+    "\n",
+    "    study = run_optuna_study(optuna_opt.optuna_objective,sampler= optuna.samplers.TPESampler(n_startup_trials=2,seed=1),n_trials=3,gc_after_trial=True,direction=\"minimize\",show_plots=False)\n",
+    "    print(f\"O Melhor modelo foi o de número {study.best_trial.number}\")\n",
+    "    print(\"Best hyperparameters: \", study.best_trial.params)\n",
+    "\n",
+    "    peru_forecast, target_peru = forecast_ann(peru_x, peru_y, splits, model=LSTMPlus, epochs=100,\n",
+    "                                                     arch_config={key: value for key, value in list(study.best_trial.params.items())[:-1]},\n",
+    "                                                     btfms=TSStandardize(),loss_func=HuberLoss('mean'),cbs=[ReduceLROnPlateau(patience=3)],\n",
+    "                                                     lr=study.best_trial.params['learning_rate_model'])\n",
     "\n",
     "    print(f\"RMSE: {mean_squared_error(target_peru.flatten(), peru_forecast.flatten(), squared=False)}\")\n",
     "    print(f\"MAE: {mean_absolute_error(target_peru.flatten(), peru_forecast.flatten())}\")\n",
@@ -329,7 +355,10 @@
     "    print(f\"O Melhor modelo foi o de número {study.best_trial.number}\")\n",
     "    print(\"Best hyperparameters: \", study.best_trial.params)\n",
     "\n",
-    "    residual_forecast,target_residual = forecast_ann(resid_x, resid_y,splits_testando,model=LSTMPlus, epochs=50,arch_config={},btfms=TSStandardize(),loss_func=HuberLoss('mean'),cbs=[ReduceLROnPlateau(patience=3)])\n",
+    "    residual_forecast,target_residual = forecast_ann(resid_x, resid_y,splits_testando,model=LSTMPlus, epochs=100,\n",
+    "                                                     arch_config={key: value for key, value in list(study.best_trial.params.items())[:-1]},\n",
+    "                                                     btfms=TSStandardize(),loss_func=HuberLoss('mean'),cbs=[ReduceLROnPlateau(patience=3)],\n",
+    "                                                     lr=study.best_trial.params['learning_rate_model'])\n",
     "\n",
     "    train_values = np.concatenate([resid_x[splits_testando[0]].flatten(),resid_x[splits_testando[1]].flatten()])\n",
     "    train_index = resid.loc[resid.isin(train_values)].index\n",
@@ -368,9 +397,9 @@
     "    print('====================================================================================================')\n",
     "    print('STL + ARIMA + ES + LSTM')\n",
     "    STL_ARIMA_ES_LSTM(peru=peru)\n",
-    "    #print('====================================================================================================')\n",
-    "    #print('Default LSTM')\n",
-    "    #Default_LSTM(peru=peru)\n",
+    "    print('====================================================================================================')\n",
+    "    print('Default LSTM')\n",
+    "    Default_LSTM(peru=peru)\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
